# STM32-DISCO

./: CMakeLists.txt  Toolchain_conf.cmake  scratch.txt  stm32.ld  stm32_startup.s
